Access control fix